CSV reprocessing