@@ -5,8 +5,10 @@ import com.id.pulse.modules.channel.model.PulseChannel;
 import com.id.pulse.modules.channel.model.PulseChannelGroup;
 import com.id.pulse.modules.channel.model.enums.PulseDataType;
 import com.id.pulse.modules.connector.model.PulseConnector;
+import com.id.pulse.modules.connector.model.enums.CsvTimestampFormat;
 import com.id.pulse.modules.connector.model.enums.PulseConnectorStatus;
 import com.id.pulse.modules.connector.runner.IPulseConnectorRunner;
+import com.id.pulse.modules.connector.util.CsvTimestampParser;
 import com.id.px3.utils.SafeConvert;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.config.BeanDefinition;
@@ -15,10 +17,6 @@ import org.springframework.stereotype.Component;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.locks.ReentrantLock;
@@ -29,27 +27,36 @@ import java.util.concurrent.locks.ReentrantLock;
 public class CsvConnectorRunner implements IPulseConnectorRunner {
 
     private static final int MAX_ROWS_PER_QUERY = 1000; // safety cap per query
-
     private final ReentrantLock lock = new ReentrantLock();
 
     // Params/state
     private volatile boolean running = false;
-    private String filePath;
+    private volatile boolean replayMode = false;
+    private String filePath = "";
     private String timestampColumn = "timestamp";
+    private CsvTimestampFormat timestampFormat = CsvTimestampFormat.ISO_8601;
+    private int timestampOffsetMinutes = 0;
     private boolean timeRealign = false;
     private double speedMultiplier = 1.0;
+    private char columnSeparator = ',';
+    private char decimalSeparator = '.';
+    private boolean columnSeparatorProvided = false;
+    private boolean decimalSeparatorProvided = false;
+    private int headerRowIndex = 0;
+    private int dataRowIndex = 1;
 
     // Streaming state
     private BufferedReader reader;
-    private List<String> headers = List.of();
     private Map<String, Integer> colIndex = new HashMap<>();
     private int tsColIdx = -1;
+    private final Map<String, Object> lastChannelValues = new HashMap<>();
 
     // Playback state
     private long wallStartTime = 0L;   // System.currentTimeMillis() when opened
     private long fileStartTime = 0L;   // first row original timestamp (ms)
     private String[] nextRowBuffer;    // buffered first unread row tokens
     private boolean eof = false;
+    private volatile boolean eofReached = false;
 
     // minor: log suppression for missing columns
     private final Set<String> missingColumnsWarned = new HashSet<>();
@@ -60,10 +67,37 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
             Objects.requireNonNull(connector, "connector");
             Map<String, Object> params = Optional.ofNullable(connector.getParams()).orElse(Map.of());
             this.filePath = Optional.ofNullable(params.get("filePath")).map(Object::toString).orElse("");
-            this.timestampColumn = Optional.ofNullable(params.get("timestampColumn")).map(Object::toString).filter(s -> !s.isBlank()).orElse("timestamp");
+            this.timestampColumn = Optional.ofNullable(params.get("timestampColumn"))
+                    .map(Object::toString)
+                    .map(String::trim)
+                    .orElse("timestamp");
+            this.timestampFormat = CsvTimestampParser.resolveFormat(params.get("timestampFormat"));
+            this.timestampOffsetMinutes = CsvTimestampParser.resolveOffsetMinutes(params.get("timestampOffset"));
+            Object rawColSeparator = params.get("columnSeparator");
+            boolean columnSeparatorProvided = rawColSeparator != null && !rawColSeparator.toString().trim().isEmpty();
+            this.columnSeparator = columnSeparatorProvided
+                    ? normalizeSeparator(rawColSeparator, ',')
+                    : ',';
+            Object rawDecimalSeparator = params.get("decimalSeparator");
+            this.decimalSeparatorProvided = rawDecimalSeparator != null && !rawDecimalSeparator.toString().trim().isEmpty();
+            this.decimalSeparator = decimalSeparatorProvided
+                    ? normalizeSeparator(rawDecimalSeparator, '.')
+                    : '.';
+            this.headerRowIndex = SafeConvert.toInteger(params.getOrDefault("headerRowIndex", 0)).orElse(0);
+            if (headerRowIndex < 0) {
+                headerRowIndex = 0;
+            }
+            this.dataRowIndex = SafeConvert.toInteger(params.getOrDefault("dataRowIndex", headerRowIndex + 1))
+                    .orElse(headerRowIndex + 1);
+            if (dataRowIndex <= headerRowIndex) {
+                dataRowIndex = headerRowIndex + 1;
+            }
             this.timeRealign = SafeConvert.toBoolean(params.getOrDefault("timeRealign", false)).orElse(false);
             this.speedMultiplier = SafeConvert.toDouble(params.getOrDefault("speedMultiplier", 1)).orElse(1.0);
             if (speedMultiplier <= 0) speedMultiplier = 1.0;
+            this.lastChannelValues.clear();
+            this.eof = false;
+            this.eofReached = false;
 
             if (filePath == null || filePath.isBlank()) {
                 log.error("CSV connector: Missing filePath parameter");
@@ -80,30 +114,35 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
             InputStream in = new FileInputStream(f);
             this.reader = new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8), 64 * 1024);
 
-            // Read header
-            String headerLine = reader.readLine();
-            if (headerLine == null) {
-                log.error("CSV connector: Empty file: {}", filePath);
+            // Read header at configured row
+            String rawHeaderLine = readHeaderLine(reader, headerRowIndex);
+            if (rawHeaderLine == null) {
+                log.error("CSV connector: Header row {} not found in file: {}", headerRowIndex, filePath);
                 safeClose(reader);
                 return PulseConnectorStatus.FAILED;
             }
-            headerLine = stripBom(headerLine);
-            this.headers = parseCsvLine(headerLine);
+            if (!columnSeparatorProvided) {
+                this.columnSeparator = detectSeparator(rawHeaderLine, this.columnSeparator);
+            }
+            String headerLine = stripBom(rawHeaderLine);
+            if (headerLine == null) {
+                log.error("CSV connector: Failed to parse header row {}", headerRowIndex);
+                safeClose(reader);
+                return PulseConnectorStatus.FAILED;
+            }
+            List<String> headers = parseCsvLine(headerLine, columnSeparator);
             if (headers.isEmpty()) {
                 log.error("CSV connector: Failed to parse headers in file: {}", filePath);
                 safeClose(reader);
                 return PulseConnectorStatus.FAILED;
             }
+            this.tsColIdx = locateTimestampColumnIndex(headers);
             this.colIndex = new LinkedHashMap<>();
             for (int i = 0; i < headers.size(); i++) {
                 colIndex.put(headers.get(i), i);
             }
-            this.tsColIdx = colIndex.getOrDefault(timestampColumn, -1);
-            if (tsColIdx < 0) {
-                log.error("CSV connector: Timestamp column '{}' not found in headers {}", timestampColumn, headers);
-                safeClose(reader);
-                return PulseConnectorStatus.FAILED;
-            }
+
+            skipLines(reader, Math.max(0, dataRowIndex - headerRowIndex - 1));
 
             // Read first data row to determine fileStartTime; buffer it for later processing
             String firstDataLine;
@@ -114,9 +153,10 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
                     eof = true;
                     break;
                 }
-                String[] tokens = toArray(parseCsvLine(firstDataLine));
+                String[] tokens = toArray(parseCsvLine(firstDataLine, columnSeparator));
                 if (tokens.length == 0) continue;
-                Long ts = parseTimestamp(tokens[tsColIdx]);
+                detectDecimalSeparatorIfNeeded(tokens);
+                Long ts = CsvTimestampParser.parse(tokens[tsColIdx], timestampFormat, timestampOffsetMinutes);
                 if (ts != null && ts > 0) {
                     fileStartTime = ts;
                     nextRowBuffer = tokens; // keep buffered for first query
@@ -128,7 +168,8 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
             wallStartTime = System.currentTimeMillis();
 
             running = true;
-            log.info("CSV connector opened. file='{}', tsCol='{}', realign={}, speed={}", filePath, timestampColumn, timeRealign, speedMultiplier);
+            log.info("CSV connector opened. file='{}', headerRow={}, dataRow={}, tsCol='{}', format={}, offset={}min, sep='{}', dec='{}', realign={}, speed={}",
+                    filePath, headerRowIndex, dataRowIndex, timestampColumn, timestampFormat, timestampOffsetMinutes, columnSeparator, decimalSeparator, timeRealign, speedMultiplier);
             return PulseConnectorStatus.CONNECTED;
         } catch (Exception e) {
             log.error("CSV connector: Failed to open", e);
@@ -145,6 +186,7 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
             running = false;
             safeClose(reader);
             reader = null;
+            lastChannelValues.clear();
             return PulseConnectorStatus.IDLE;
         } catch (Exception e) {
             log.error("CSV connector: error while closing", e);
@@ -153,79 +195,44 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
     }
 
     @Override
+    public void setReplayMode(boolean replayMode) {
+        this.replayMode = replayMode;
+        if (!replayMode) {
+            lastChannelValues.clear();
+        }
+    }
+
+    @Override
     public CompletableFuture<List<PulseDataPoint>> query(Map<PulseChannelGroup, List<PulseChannel>> channelsMap) {
         return CompletableFuture.supplyAsync(() -> {
-            if (!running) return List.of();
-            lock.lock();
+            if (!replayMode || !running) {
+                return List.of();
+            }
+            if (!lock.tryLock()) {
+                return List.of();
+            }
             try {
-                if (reader == null || eof) return List.of();
-
-                long now = System.currentTimeMillis();
-                long targetOriginalTs;
-                if (timeRealign) {
-                    long elapsedWall = Math.max(0L, now - wallStartTime);
-                    targetOriginalTs = fileStartTime + (long) Math.floor(elapsedWall * speedMultiplier);
-                } else {
-                    targetOriginalTs = now; // compare with original timestamps as-is
+                if (reader == null) {
+                    return List.of();
                 }
-
                 List<PulseDataPoint> out = new ArrayList<>();
-                int emittedRows = 0;
-
-                // loop reading rows up to targetOriginalTs or until safety cap per query
-                while (!eof && emittedRows < MAX_ROWS_PER_QUERY) {
+                int rowsRead = 0;
+                while (!eof && rowsRead < MAX_ROWS_PER_QUERY) {
                     String[] row = pollNextRow();
-                    if (row == null) break; // nothing buffered and cannot read more yet
-
-                    Long rowTs = parseTimestamp(row[tsColIdx]);
-                    if (rowTs == null) {
-                        // skip rows with invalid ts
-                        continue;
-                    }
-                    if (rowTs > targetOriginalTs) {
-                        // Not yet time to emit this row; buffer it back and stop
-                        nextRowBuffer = row;
+                    if (row == null) {
                         break;
                     }
-
-                    long outTms;
-                    if (timeRealign) {
-                        // Scheduled wall time for this row
-                        long dtFile = Math.max(0L, rowTs - fileStartTime);
-                        outTms = wallStartTime + (long) Math.floor(dtFile / Math.max(0.0000001, speedMultiplier));
-                    } else {
-                        outTms = rowTs;
+                    Long rowTs = CsvTimestampParser.parse(row[tsColIdx], timestampFormat, timestampOffsetMinutes);
+                    if (rowTs == null) {
+                        continue;
                     }
-
-                    // For each channel requested, pick the proper column from CSV and convert
-                    channelsMap.forEach((group, channels) -> {
-                        for (PulseChannel ch : channels) {
-                            String columnName = Optional.ofNullable(ch.getSourcePath()).filter(s -> !s.isBlank()).orElse(ch.getPath());
-                            Integer idx = colIndex.get(columnName);
-                            if (idx == null) {
-                                if (missingColumnsWarned.add(columnName)) {
-                                    log.warn("CSV connector: column '{}' not found for channel '{}' (group '{}')", columnName, ch.getPath(), group.getCode());
-                                }
-                                return;
-                            }
-                            String cell = idx < row.length ? row[idx] : null;
-                            if (cell == null || cell.isEmpty()) {
-                                return;
-                            }
-                            Optional<?> conv = convertCell(cell, ch.getDataType());
-                            conv.ifPresent(val -> out.add(PulseDataPoint.builder()
-                                    .groupCode(group.getCode())
-                                    .path(ch.getPath())
-                                    .tms(outTms)
-                                    .type(ch.getDataType())
-                                    .val(val)
-                                    .build()));
-                        }
-                    });
-
-                    emittedRows++;
+                    rowsRead++;
+                    long outTms = computeOutputTimestamp(rowTs);
+                    emitRow(channelsMap, row, outTms, out);
                 }
-
+                if (rowsRead == 0 && eof) {
+                    lastChannelValues.clear();
+                }
                 return out;
             } catch (Exception e) {
                 log.error("CSV connector: error during query", e);
@@ -246,7 +253,7 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
         try {
             String line;
             while ((line = reader.readLine()) != null) {
-                String[] tokens = toArray(parseCsvLine(line));
+                String[] tokens = toArray(parseCsvLine(line, columnSeparator));
                 if (tokens.length == 0) continue;
                 return tokens;
             }
@@ -264,6 +271,159 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
         try { c.close(); } catch (Exception ignored) { }
     }
 
+    private char normalizeSeparator(Object raw, char fallback) {
+        if (raw == null) {
+            return fallback;
+        }
+        String str = raw.toString();
+        if (str.isBlank()) {
+            return fallback;
+        }
+        return str.trim().charAt(0);
+    }
+
+    private char detectSeparator(String line, char current) {
+        if (line == null) {
+            return current;
+        }
+        int commas = 0;
+        int semicolons = 0;
+        boolean inQuotes = false;
+        for (int i = 0; i < line.length(); i++) {
+            char c = line.charAt(i);
+            if (c == '"') {
+                inQuotes = !inQuotes;
+            } else if (!inQuotes) {
+                if (c == ',') {
+                    commas++;
+                } else if (c == ';') {
+                    semicolons++;
+                }
+            }
+        }
+        if (semicolons > commas && semicolons > 0) {
+            return ';';
+        }
+        if (commas > semicolons && commas > 0) {
+            return ',';
+        }
+        return current;
+    }
+
+    private String normalizeDecimal(String value) {
+        if (value == null) {
+            return null;
+        }
+        if (decimalSeparator == '.' || value.indexOf(decimalSeparator) < 0) {
+            return value;
+        }
+        return value.replace(decimalSeparator, '.');
+    }
+
+    private String readHeaderLine(BufferedReader reader, int headerRowIdx) throws IOException {
+        if (headerRowIdx <= 0) {
+            return reader.readLine();
+        }
+        String line;
+        int current = 0;
+        while ((line = reader.readLine()) != null) {
+            if (current == headerRowIdx) {
+                return line;
+            }
+            current++;
+        }
+        return null;
+    }
+
+    private void skipLines(BufferedReader reader, int linesToSkip) throws IOException {
+        if (linesToSkip <= 0) {
+            return;
+        }
+        for (int i = 0; i < linesToSkip; i++) {
+            if (reader.readLine() == null) {
+                break;
+            }
+        }
+    }
+
+    private void detectDecimalSeparatorIfNeeded(String[] tokens) {
+        if (decimalSeparatorProvided) {
+            return;
+        }
+        for (String token : tokens) {
+            if (token == null) {
+                continue;
+            }
+            String trimmed = token.trim();
+            if (trimmed.isEmpty()) {
+                continue;
+            }
+            if (looksLikeDecimal(trimmed, ',')) {
+                decimalSeparator = ',';
+                decimalSeparatorProvided = true;
+                return;
+            }
+            if (looksLikeDecimal(trimmed, '.')) {
+                decimalSeparator = '.';
+                decimalSeparatorProvided = true;
+                return;
+            }
+        }
+    }
+
+    private boolean looksLikeDecimal(String value, char separator) {
+        int idx = value.indexOf(separator);
+        if (idx <= 0 || idx == value.length() - 1) {
+            return false;
+        }
+        boolean hasDigitBefore = false;
+        boolean hasDigitAfter = false;
+        for (int i = 0; i < idx; i++) {
+            if (Character.isDigit(value.charAt(i))) {
+                hasDigitBefore = true;
+                break;
+            }
+        }
+        for (int i = idx + 1; i < value.length(); i++) {
+            if (Character.isDigit(value.charAt(i))) {
+                hasDigitAfter = true;
+                break;
+            }
+        }
+        return hasDigitBefore && hasDigitAfter;
+    }
+
+    private int locateTimestampColumnIndex(List<String> headers) {
+        boolean timestampBlank = timestampColumn == null || timestampColumn.isBlank();
+        int idx = -1;
+        for (int i = 0; i < headers.size(); i++) {
+            String col = headers.get(i);
+            String normalized = col == null ? "" : col.trim();
+            boolean columnBlank = normalized.isEmpty();
+            if (columnBlank) {
+                if (timestampBlank) {
+                    if (idx >= 0) {
+                        throw new IllegalArgumentException("CSV connector: multiple blank column headers found. Only the timestamp column may be blank.");
+                    }
+                    idx = i;
+                } else {
+                    throw new IllegalArgumentException("CSV connector: column headers cannot be blank (only the timestamp column may be blank).");
+                }
+                continue;
+            }
+            if (!timestampBlank && normalized.equalsIgnoreCase(timestampColumn)) {
+                idx = i;
+            }
+        }
+        if (timestampBlank && idx < 0) {
+            throw new IllegalArgumentException("CSV connector: timestamp column configured as blank, but CSV header does not contain a blank column.");
+        }
+        if (!timestampBlank && idx < 0) {
+            throw new IllegalArgumentException("CSV connector: Timestamp column '" + timestampColumn + "' not found in headers " + headers);
+        }
+        return idx;
+    }
+
     private static String stripBom(String s) {
         if (s == null) return null;
         if (!s.isEmpty() && s.charAt(0) == '\uFEFF') {
@@ -273,7 +433,11 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
     }
 
     // CSV parsing with support for quoted fields and commas inside quotes
-    private static List<String> parseCsvLine(String line) {
+    private List<String> parseCsvLine(String line) {
+        return parseCsvLine(line, columnSeparator);
+    }
+
+    private static List<String> parseCsvLine(String line, char separator) {
         if (line == null) return List.of();
         List<String> fields = new ArrayList<>();
         StringBuilder cur = new StringBuilder();
@@ -288,7 +452,7 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
                 } else {
                     inQuotes = !inQuotes;
                 }
-            } else if (ch == ',' && !inQuotes) {
+            } else if (ch == separator && !inQuotes) {
                 fields.add(cur.toString());
                 cur.setLength(0);
             } else {
@@ -313,10 +477,10 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
         return arr;
     }
 
-    private static Optional<?> convertCell(String cell, PulseDataType type) {
+    private Optional<?> convertCell(String cell, PulseDataType type) {
         try {
             return switch (type) {
-                case DOUBLE -> SafeConvert.toDouble(cell).map(v -> v);
+                case DOUBLE -> SafeConvert.toDouble(normalizeDecimal(cell)).map(v -> v);
                 case LONG -> SafeConvert.toLong(cell).map(v -> v);
                 case BOOLEAN -> SafeConvert.toBoolean(cell).map(v -> v);
                 case STRING -> Optional.of(cell);
@@ -326,38 +490,53 @@ public class CsvConnectorRunner implements IPulseConnectorRunner {
         }
     }
 
-    private static Long parseTimestamp(String s) {
-        if (s == null) return null;
-        s = s.trim();
-        if (s.isEmpty()) return null;
-        // try numeric
-        Optional<Long> asLong = SafeConvert.toLong(s);
-        if (asLong.isPresent()) {
-            long v = asLong.get();
-            if (v < 1_000_000_000_000L && v > 1_000_000_000L) { // very likely seconds
-                v = v * 1000L;
+    private long computeOutputTimestamp(long rowTs) {
+        if (!timeRealign) {
+            return rowTs;
+        }
+        long dtFile = Math.max(0L, rowTs - fileStartTime);
+        return wallStartTime + (long) Math.floor(dtFile / Math.max(0.0000001, speedMultiplier));
+    }
+
+    private void emitRow(Map<PulseChannelGroup, List<PulseChannel>> channelsMap,
+                         String[] row,
+                         long outTms,
+                         List<PulseDataPoint> collector) {
+        channelsMap.forEach((group, channels) -> {
+            for (PulseChannel ch : channels) {
+                String columnName = Optional.ofNullable(ch.getSourcePath()).filter(s -> !s.isBlank()).orElse(ch.getPath());
+                Integer idx = colIndex.get(columnName);
+                if (idx == null) {
+                    if (missingColumnsWarned.add(columnName)) {
+                        log.warn("CSV connector: column '{}' not found for channel '{}' (group '{}')",
+                                columnName, ch.getPath(), group.getCode());
+                    }
+                    continue;
+                }
+                String cell = idx < row.length ? row[idx] : null;
+                Object valueToEmit;
+                if (cell != null && !cell.isEmpty()) {
+                    Optional<?> conv = convertCell(cell, ch.getDataType());
+                    if (conv.isEmpty()) {
+                        lastChannelValues.remove(ch.getPath());
+                        continue;
+                    }
+                    valueToEmit = conv.get();
+                    lastChannelValues.put(ch.getPath(), valueToEmit);
+                } else {
+                    valueToEmit = lastChannelValues.get(ch.getPath());
+                    if (valueToEmit == null) {
+                        continue;
+                    }
+                }
+                collector.add(PulseDataPoint.builder()
+                        .groupCode(group.getCode())
+                        .path(ch.getPath())
+                        .tms(outTms)
+                        .type(ch.getDataType())
+                        .val(valueToEmit)
+                        .build());
             }
-            return v;
-        }
-        // try ISO-8601
-        try {
-            Instant ins = Instant.parse(s);
-            return ins.toEpochMilli();
-        } catch (Exception ignored) { }
-        // try common patterns (assume system default zone)
-        String[] patterns = new String[] {
-                "yyyy-MM-dd HH:mm:ss.SSS",
-                "yyyy-MM-dd HH:mm:ss",
-                "yyyy/MM/dd HH:mm:ss",
-                "dd/MM/yyyy HH:mm:ss",
-                "MM/dd/yyyy HH:mm:ss"
-        };
-        for (String p : patterns) {
-            try {
-                LocalDateTime ldt = LocalDateTime.parse(s, DateTimeFormatter.ofPattern(p));
-                return ldt.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
-            } catch (Exception ignored) { }
-        }
-        return null;
+        });
     }
 }
